# VCG-DUTH-ImageBinarizationTool

./: .gitignore  BinaryImage.cpp  BinaryImage.h  CMakeLists.txt  GrayScaleImage.cpp  GrayScaleImage.h  README.md  binarization.cpp
