cmake_minimum_required(VERSION 3.4)
project(binarization)
include(CMakeToolsHelpers OPTIONAL)
if (APPLE)
    set (OpenCV_DIR "/usr/local/Cellar/opencv3/3.1.0_4/share/OpenCV")
elseif(WIN32)
    set (OpenCV_DIR "C:/opencv/build/x64/vc14/lib")
endif()
find_package(OpenCV REQUIRED)
if (WIN32)
    set(CMAKE_GENERATOR_PLATFORM "Visual Studio 15 2017 Win64")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()
set(SOURCE_FILES binarization.cpp BinaryImage.h BinaryImage.cpp GrayScaleImage.h GrayScaleImage.cpp)
add_executable(binarization ${SOURCE_FILES})
target_link_libraries(binarization ${OpenCV_LIBS} )
